fixed some colors for icons and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,8 @@
 @layer components {
   .sidebar-icon {
     @apply relative flex items-center justify-center h-12 w-12 my-2 
-    bg-gray-400 
-    text-green-700
-    dark:text-green-500
-    hover:bg-green-600 hover:text-white
+    bg-gray-400 text-green-600 hover:bg-green-600 hover:text-green-900
+    dark:text-green-500 dark:hover:bg-green-600 dark:hover:text-white
     rounded-3xl hover:rounded-xl
     transition-all duration-300 ease-linear
     dark:bg-gray-800;
